# zksync-airbender-prover

./: .dockerignore  .gitignore  CHANGELOG.md  CODEOWNERS  Cargo.toml  README.md  deny.toml  multiblock_batch.text  proof_input.json  rust-toolchain.toml
.github/actions/runner-setup/: action.yaml
.github/release-please/: config.json
.github/scripts/: create-dtrack-collection-project.sh
.github/workflows/: build-template.yaml  cargo-license.yaml  ci.yaml  release-bins.yml  release-please.yaml  sbom-analysis-reusable.yaml  secrets_scanner.yaml  stage-build.yaml
crates/protocol_version/: Cargo.toml
crates/protocol_version/src/: lib.rs
crates/sequencer_proof_client/: Cargo.toml
crates/sequencer_proof_client/src/: command_handler.rs  file_based_proof_client.rs  lib.rs  main.rs  metrics.rs  multi_sequencer_proof_client.rs  sequencer_endpoint.rs  sequencer_proof_client.rs  utils.rs
crates/sequencer_proof_client/src/sequencer_proof_client/: masked_url.rs  mod.rs
crates/test_data/: .gitignore
crates/tools/debugging_cli/: Cargo.toml
crates/tools/debugging_cli/src/: cli.rs  main.rs
crates/zksync_os_fri_prover/: Cargo.toml
crates/zksync_os_fri_prover/src/: lib.rs  main.rs  metrics.rs  tests.rs
crates/zksync_os_fri_prover/tests/: integration_test.rs
crates/zksync_os_prover_common/: Cargo.toml
crates/zksync_os_prover_common/src/: lib.rs  multi_binary_prover.rs
crates/zksync_os_prover_service/: Cargo.toml
crates/zksync_os_prover_service/src/: lib.rs  main.rs  metrics.rs  tests.rs  utils.rs
crates/zksync_os_prover_service/tests/: integration_test.rs
crates/zksync_os_snark_prover/: Cargo.toml
crates/zksync_os_snark_prover/examples/: vk_e2e.rs
crates/zksync_os_snark_prover/src/: lib.rs  main.rs  metrics.rs  tests.rs
crates/zksync_os_snark_prover/tests/: integration_test.rs
crs/: README.md
docker/zksync-airbender-prover/: Dockerfile  entrypoint.sh
docker/zksync-os-prover-fri/: Dockerfile
docker/zksync-os-prover-snark/: Dockerfile  entrypoint.sh
docs/: setup_linux_vm.md
scripts/: fake_snark_prover_api.py  ubuntu_setup.sh
test_data/: .gitignore  fri_job.json  snark_job.json
tools/cli/: Cargo.toml  README.md
tools/cli/src/: fri_utils.rs  main.rs
tools/debugging_cli/: Cargo.toml  README.md
tools/debugging_cli/src/: fri_utils.rs  lib.rs  main.rs  snark_utils.rs
