[workspace]
members = [ 
    "crates/sequencer_proof_client",
    "crates/zksync_os_fri_prover",
    "crates/zksync_os_snark_prover"
]
resolver = "2"

[workspace.package]
edition = "2021"
#rust-version = "1.88"
version = "0.1.0"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-airbender-prover/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[workspace.dependencies]
zksync_sequencer_proof_client = { path = "./crates/sequencer_proof_client" }
zkos_wrapper = { package = "zkos-wrapper", git = "https://github.com/matter-labs/zkos-wrapper.git", rev = "v0.3.4" }

zksync_airbender_execution_utils = { package = "execution_utils", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.3.3" }
zksync_airbender_cli = { package = "cli", git = "https://github.com/matter-labs/zksync-airbender.git", tag = "v0.3.3" }
bellman = { package = "zksync_bellman", version = "=0.32.2" }
circuit_definitions = "=0.152.5"
crypto_codegen = { package = "zksync_solidity_vk_codegen", version = "=0.32.2" }

anyhow = "1.0"
base64 = "0.22.1"
bincode = {  version = "2", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
