[workspace]
members = [ "crates/sequencer_proof_client",
    "crates/zksync_os_fri_prover",
    "crates/zksync_os_snark_prover"
]
resolver = "2"

[workspace.package]
edition = "2021"
#rust-version = "1.88"
version = "0.1.0"
authors = ["The Matter Labs Team <hello@matterlabs.dev>"]
homepage = "https://zksync.io/"
repository = "https://github.com/matter-labs/zksync-airbender-prover/"
license = "MIT OR Apache-2.0"
keywords = ["blockchain", "zksync", "zk", "risc-v"]
categories = ["cryptography"]

[workspace.dependencies]

#zkos_wrapper = { package = "zkos-wrapper", git = "https://github.com/matter-labs/zkos-wrapper.git", tag = "v0.4.0" }

zkos_wrapper = { path = "../zkos-wrapper/wrapper", package = "zkos-wrapper" }

# 0.4.1 + Anton's fix
zksync_airbender_execution_utils = { package = "execution_utils", git = "https://github.com/matter-labs/zksync-airbender.git", rev = "ff0821df8b0e2a7003828209478cc4e8fe682d81" }
zksync_airbender_cli = { package = "cli", git = "https://github.com/matter-labs/zksync-airbender.git", rev = "ff0821df8b0e2a7003828209478cc4e8fe682d81" }


bellman = { package = "zksync_bellman", version = "=0.32.2" }
circuit_definitions = "=0.152.5"
crypto_codegen = { package = "zksync_solidity_vk_codegen", version = "=0.32.2" }

anyhow = "1.0"
base64 = "0.22.1"
bincode = {  version = "2", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive"] }
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }


# Things below are to guarantee that we can compile in reasonable time.
# Once we do some optimizations to the zkos-wrapper and compression verifier, we'll be able to remove some of them.

[profile.release.package."blake2_with_compression_verifier"]
opt-level = 1
codegen-units = 256
overflow-checks = true

[profile.release.package."zkos-wrapper"]
opt-level = 1
codegen-units = 256
overflow-checks = true

[profile.release]
lto = false
# This is needed for zksync-airbender crates to compile in a reasonable time for x86-64-unknown-linux-gnu
overflow-checks = true