[package]
name = "zksync_sequencer_proof_client"
edition.workspace = true
#rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zkos_wrapper.workspace = true
zksync_airbender_execution_utils.workspace = true
bellman.workspace = true
circuit_definitions.workspace = true
crypto_codegen.workspace = true

anyhow.workspace = true
base64.workspace = true
bincode.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
