[package]
name = "zksync_os_fri_prover"
edition.workspace = true
#rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_airbender_cli.workspace = true
zksync_airbender_execution_utils.workspace = true
zksync_sequencer_proof_client = { path = "../sequencer_proof_client" }
zksync_os_prover_common = { path = "../zksync_os_prover_common" }

anyhow.workspace = true
base64.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
bincode.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
vise.workspace = true
vise-exporter.workspace = true

[features]
gpu = ["zksync_airbender_cli/gpu", "zksync_os_prover_common/gpu"]
