[package]
name = "zksync_os_fri_prover"
edition.workspace = true
#rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# internal dependencies
protocol_version.workspace = true
zksync_sequencer_proof_client.workspace = true

# zksync-airbender dependencies
zksync_airbender_cli.workspace = true
zksync_airbender_execution_utils.workspace = true

# external dependencies
anyhow.workspace = true
base64.workspace = true
bincode.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio = { workspace = true, features = ["full"] }
vise.workspace = true
vise-exporter.workspace = true
url.workspace = true

[features]
gpu = ["zksync_airbender_cli/gpu"]
