[package]
name = "zksync_os_prover_service"
edition.workspace = true
#rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_sequencer_proof_client = { path = "../sequencer_proof_client" }
zksync_os_fri_prover = { path = "../zksync_os_fri_prover" }
zksync_os_snark_prover = { path = "../zksync_os_snark_prover" }

zksync_airbender_cli.workspace = true
zksync_airbender_execution_utils.workspace = true
zkos_wrapper.workspace = true

tokio.workspace = true
serde_json.workspace = true

serde.workspace = true
anyhow.workspace = true
bincode.workspace = true
base64.workspace = true
#async-trait = "0.1"
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true

[features]
gpu = ["zksync_airbender_cli/gpu", "zkos_wrapper/gpu"]
default = ["gpu"]