[package]
name = "zksync_os_snark_prover"
edition.workspace = true
#rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
protocol_version.workspace = true
zksync_sequencer_proof_client.workspace = true

zksync_airbender_cli.workspace = true
zksync_airbender_execution_utils.workspace = true
zkos_wrapper.workspace = true
proof-compression = { workspace = true, optional = true }

tokio = { workspace = true, features = ["full"] }
serde_json.workspace = true
serde.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
vise.workspace = true
vise-exporter.workspace = true

[features]
gpu = ["zksync_airbender_cli/gpu", "zkos_wrapper/gpu", "proof-compression/gpu"]
