[package]
name = "zksync_os_snark_prover"
edition.workspace = true
#rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# internal dependencies
protocol_version.workspace = true
zksync_sequencer_proof_client.workspace = true

# zksync-airbender dependencies
zksync_airbender_execution_utils.workspace = true

# zkos-wrapper dependencies
zkos_wrapper.workspace = true

# external dependencies
anyhow.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true
vise.workspace = true
vise-exporter.workspace = true
url.workspace = true

[dev-dependencies]
bincode.workspace = true
serde_json.workspace = true

[features]
gpu = ["zkos_wrapper/gpu"]
