[package]
name = "prover-debugging-cli"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "prover-debugging-cli"
path = "src/main.rs"

[dependencies]
zksync_os_fri_prover = { path = "../../crates/zksync_os_fri_prover" }
zksync_sequencer_proof_client = { path = "../../crates/sequencer_proof_client" }
zksync_airbender_cli.workspace = true
zksync_airbender_execution_utils.workspace = true

anyhow.workspace = true
base64.workspace = true
bincode.workspace = true
clap.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[features]
gpu = ["zksync_airbender_cli/gpu", "zksync_os_fri_prover/gpu"]

